@@ -30,6 +30,10 @@
 
 #include "font.h"
 
+#ifdef _WIN32
+	#include <WTypes.h>
+#endif
+
 #include <GL/gl.h>
 #include <iostream>
 
