@@ -28,6 +28,10 @@
 #include <string.h>
 #include <math.h>
 
+#ifdef _WIN32
+	#include <WTypes.h>
+#endif
+
 #include <GL/gl.h>
 #include <GL/glu.h>
 
