@@ -23,7 +23,7 @@
 #include "error_util.h"
 #include <stdlib.h>
 #include <string.h>
-
+#include <stdio.h>
 
 char *string_copy( const char *src ) 
 {
